--- a/workshop01/templates/index.html
+++ b/workshop01/templates/index.html
@@ -2,7 +2,7 @@
 <html>
   <body>
     <img src="/static/image.png" alt="purple heart">
-    <h1>{{ statement }}!</h1>
+    <h1>{{ statement }}</h1>
     <a href="https://github.com/VisnuRavi/deployAppRepo">App Repository</a>
   </body>
 </html>
